--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="destinations">
         <h2>Top Destinations</h2>
         <p>Discover amazing places across the globe with our curated trips and treks.</p>
-        <img src="../img/td.jpeg" alt="Top Destination" style="width: 30%; justify-content: center;">
+        <img src="img-1.jpg" alt="Top Destination" style="width: 30%; justify-content: center;">
     </section>
 
     <!-- Gallery Section -->
