--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <p>Explore photos from our past adventures and trips.</p>
-        <img src="../img/main-1.jpg" alt="Gallery" style="width: 30%; justify-content: center;">
+        <img src="main-1.jpg" alt="Gallery" style="width: 30%; justify-content: center;">
     </section>
 
     <!-- Contact Section -->
